<resources>
    <string name="app_name">密码盒子</string>
    <string name="action_settings">设置</string>
    <string name="sp_filename">Config</string>
    <string name="desc">不要写点什么吗?</string>
    <string name="singup">SIGN UP</string>
    <string name="login">LOGIN IN</string>
    <string name="skip">SKIP</string>
    <string name="welcome">Welcome to PasswordBox.</string>
    <string name="welcomedesc">这可能是一款很好的密码管理APP。</string>
    <string name="action_search">搜索</string>
    <string name="action_backups">备份</string>
    <string name="action_down">还原</string>
    <string name="menu_home">首页</string>
    <string name="menu_setting">设置</string>
    <string name="menu_message">反馈</string>
    <string name="information">关于</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="setting_title1">常规</string>
    <string name="stting_name1">重置内容</string>
    <string name="setting_desc1">初始化到最初状态,记录的信息将丢失。</string>
    <string name="setting_name2">密码保护</string>
    <string name="setting_desc2">进入密码盒子时,通过密码验证</string>
    <string name="setting_name3">重置密码</string>
    <string name="setting_desc3">将重置对应用的密码保护</string>
    <string name="menu_share">分享</string>
    <string name="action_share">分享</string>
    <string name="pop_edit">编辑</string>
    <string name="pop_clear">删除</string>
    <string name="viersion">密码盒子1.0</string>
    <string name="litepal">LitePalFramework/LitePal</string>
    <string name="material_edittext">rengwuxian/MaterialEditText</string>
    <string name="about_desc">应用版本号</string>
    <string name="about_desc2">开源项目感谢</string>
    <string name="event_bus">greenrobot/EventBus</string>
    <string name="app_desc">一款干净的密码管理应用,请大家放心食用！http://pre.im/gXPn</string>
    <string name="pop_icon">更换图标</string>
    <string-array name="game_names">
        <item>Steam</item>
        <item>PSN</item>
        <item>Xbox Live</item>
        <item>战网(中)</item>
        <item>战网(全)</item>
        <item>腾讯游戏</item>
        <item>网易游戏</item>
        <item>Dota2</item>
        <item>剑网3</item>
        <item>天龙八部</item>
        <item>部落冲突</item>
        <item>刀塔传奇</item>
        <item>虚荣</item>
        <item>太极熊猫</item>
        <item>列王的纷争</item>
    </string-array>
    <string-array name="tool_names">
        <item>Google</item>
        <item>Github</item>
        <item>Stack Overflow</item>
        <item>Pocket</item>
        <item>Kindle</item>
        <item>多看阅读</item>
        <item>简书</item>
        <item>印象笔记</item>
        <item>迅雷</item>
        <item>百度云</item>
        <item>360云盘</item>
        <item>115云盘</item>
        <item>京东</item>
        <item>淘宝</item>
        <item>亚马逊</item>
        <item>美团</item>
        <item>携程旅游</item>
        <item>Firefox</item>
        <item>UC浏览器</item>
        <item>支付宝</item>
    </string-array>
    <string-array name="social_names">
        <item>QQ</item>
        <item>微信</item>
        <item>陌陌</item>
        <item>WhatsApp</item>
        <item>Telegram</item>
        <item>Path</item>
        <item>新浪微博</item>
        <item>Twitter</item>
        <item>Tumblr</item>
        <item>FaceBook</item>
        <item>知乎</item>
        <item>Quora</item>
        <item>豆瓣</item>
        <item>Reddit</item>
        <item>酷安市场</item>
        <item>Bilibili</item>
        <item>AcFun</item>
    </string-array>
    <string-array name="tab_title">
        <item>游戏</item>
        <item>工具</item>
        <item>社交</item>
    </string-array>
</resources>
