<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_title1"
        android:padding="@dimen/basic12dp"
        android:textSize="13sp"
        android:textColor="#009688"
        />
    <RelativeLayout
        android:id="@+id/rl_resetcontent"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic12dp"
        >
        <TextView
            android:id="@+id/setting_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stting_name1"
            android:textSize="@dimen/basic18sp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_desc1"
            android:layout_below="@id/setting_name1"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_resetPassword"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        >
        <TextView
            android:id="@+id/setting_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_name3"
            android:textSize="@dimen/basic18sp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_desc3"
            android:layout_below="@id/setting_name3"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_protect"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/basic12dp"
        >
        <TextView
            android:id="@+id/setting_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_name2"
            android:textSize="18sp"
            android:textColor="#000000"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_desc2"
            android:layout_below="@id/setting_name2"
            />
        <com.vanhely.passwordbox.widget.SwitchImageView
            android:id="@+id/iv_protect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_btn_check_off_focused"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/basic10dp"
            android:layout_marginEnd="@dimen/basic10dp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

</LinearLayout>