<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <ImageView
        android:layout_width="@dimen/basic160dp"
        android:layout_height="wrap_content"
        android:background="@drawable/iconfont_passwordoff"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/basic60dp" />
    <ImageView
        android:layout_width="@dimen/basic180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/iconfont_hidepassword"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/basic25sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/basic8dp"
            android:text="@string/welcomedesc"
            android:textSize="@dimen/basic18sp"
            android:textColor="#F1F8E9"
            />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_centerInParent="true"
        android:id="@+id/skip"
        android:layout_width="148dp"
        android:layout_height="@dimen/basic42dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/basic115dp"
        android:layout_marginLeft="@dimen/basic20dp"
        android:layout_marginStart="@dimen/basic20dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/basic19sp" />




</RelativeLayout>